# quicky

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  package-lock.json  package.json  quicky.optimized.wasm  quicky.wizened.wasm
.cargo/: config.toml
crates/quicky/: Cargo.toml  build.rs
crates/quicky-wasm/: Cargo.toml
crates/quicky-wasm/.cargo/: config
crates/quicky-wasm/src/: wasm.rs
crates/quicky/src/: main.rs
js/: index.js
scripts/: bench.js  build.sh
src/: lib.rs
